# pyeutl

./: .gitignore  1_create_database.ipynb  2_Installations.ipynb  README.md  main.py  main_create_database.py  orm_1_create_database.ipynb  orm_2_Installations.ipynb  orm_3_Registry.ipynb  pyproject.toml  requirements.txt  zip_1_load_data.ipynb
_old/: 2_First_steps.ipynb
attic/: constants.py  paths.py
codebase/: entity_connexion.py
data/: transactions_for_arrowgraph.csv
eutl_orm/: __init__.py  dataAccessLayer.py  mappings.py  model.py
pyeutl/: __init__.py  utils.py
pyeutl/orm/: __init__.py  dataAccessLayer.py  mappings.py  model.py
pyeutl/ziploader/: __init__.py  category_mappings.py  utils.py  ziploader.py
scripts/: explore_OMV.py  explore_one_installation.ipynb  exploring_OMV.ipynb  investigate_firms.py  plot_arrows.py  price_PGE.ipynb  run_entity_connection.py  setup_db.py
