[tool.poetry]
name = "pyeutl"
version = "0.1.0"
description = ""
authors = ["Jan Abrell <abrell@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
notebook = "^7.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
